--- a/Calculator/Calculator/MainPage.xaml
+++ b/Calculator/Calculator/MainPage.xaml
@@ -20,33 +20,33 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Label x:Name="resultText" FontSize="48" BackgroundColor="Black" Text="{Binding MathematicalSentence}"
-              TextColor="White" HorizontalTextAlignment="End" VerticalTextAlignment="Center"
+        <Label x:Name="resultText" FontSize="32" BackgroundColor="#455368" Text="{Binding MathematicalSentence}"
+              TextColor="#f1f1f1" HorizontalTextAlignment="End" VerticalTextAlignment="Center"
               LineBreakMode="NoWrap" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
 
-        <Button Command="{Binding OnClickMemoryFeaturesCommand}" CommandParameter="MC" Text="MC" Grid.Row="1" Grid.Column="0"/>
-        <Button Command="{Binding OnClickMemoryFeaturesCommand}" CommandParameter="M+" Text="M+" Grid.Row="1" Grid.Column="1"/>
-        <Button Command="{Binding OnClickMemoryFeaturesCommand}" CommandParameter="M-" Text="M-" Grid.Row="1" Grid.Column="2"/>
-        <Button Command="{Binding OnClickMemoryFeaturesCommand}" CommandParameter="MR" Text="MR" Grid.Row="1" Grid.Column="3"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickMemoryFeaturesCommand}"  CommandParameter="MC" Text="MC" Grid.Row="1" Grid.Column="0"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickMemoryFeaturesCommand}" CommandParameter="M+" Text="M+" Grid.Row="1" Grid.Column="1"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickMemoryFeaturesCommand}" CommandParameter="M-" Text="M-" Grid.Row="1" Grid.Column="2"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickMemoryFeaturesCommand}" CommandParameter="MR" Text="MR" Grid.Row="1" Grid.Column="3"/>
 
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="1" Text="1" Grid.Row="2" Grid.Column="0"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="2" Text="2" Grid.Row="2" Grid.Column="1"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="3" Text="3" Grid.Row="2" Grid.Column="2"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="4" Text="4" Grid.Row="3" Grid.Column="0"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="5" Text="5" Grid.Row="3" Grid.Column="1"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="6" Text="6" Grid.Row="3" Grid.Column="2"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="7" Text="7" Grid.Row="4" Grid.Column="0"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="8" Text="8" Grid.Row="4" Grid.Column="1"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="9" Text="9" Grid.Row="4" Grid.Column="2"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="0" Text="0" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="." Text="." Grid.Row="5" Grid.Column="0" />
-        
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="/" Text="/" Grid.Row="2" Grid.Column="3"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="*" Text="x" Grid.Row="3" Grid.Column="3"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="-" Text="-" Grid.Row="4" Grid.Column="3"/>
-        <Button Command="{Binding OnClickDigitCommand}" CommandParameter="+" Text="+" Grid.Row="5" Grid.Column="3"/>
-        <Button Command="{Binding OnClearMathematicalSentenceCommand}" Text="C" Grid.Row="6" Grid.Column="0"/>
-        <Button Command="{Binding OnCalculateAnswerCommand}" Text="=" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="3"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="1" Text="1" Grid.Row="2" Grid.Column="0"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="2" Text="2" Grid.Row="2" Grid.Column="1"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="3" Text="3" Grid.Row="2" Grid.Column="2"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="4" Text="4" Grid.Row="3" Grid.Column="0"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="5" Text="5" Grid.Row="3" Grid.Column="1"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="6" Text="6" Grid.Row="3" Grid.Column="2"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="7" Text="7" Grid.Row="4" Grid.Column="0"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="8" Text="8" Grid.Row="4" Grid.Column="1"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="9" Text="9" Grid.Row="4" Grid.Column="2"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="0" Text="0" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClickDigitCommand}" CommandParameter="." Text="." Grid.Row="5" Grid.Column="0" />
+
+        <Button FontSize="24" BackgroundColor="#f57e72" TextColor="#f1f1f1" Command="{Binding OnClickDigitCommand}" CommandParameter="/" Text="/" Grid.Row="2" Grid.Column="3"/>
+        <Button FontSize="24" BackgroundColor="#f57e72" TextColor="#f1f1f1" Command="{Binding OnClickDigitCommand}" CommandParameter="*" Text="x" Grid.Row="3" Grid.Column="3"/>
+        <Button FontSize="24" BackgroundColor="#f57e72" TextColor="#f1f1f1" Command="{Binding OnClickDigitCommand}" CommandParameter="-" Text="-" Grid.Row="4" Grid.Column="3"/>
+        <Button FontSize="24" BackgroundColor="#f57e72" TextColor="#f1f1f1" Command="{Binding OnClickDigitCommand}" CommandParameter="+" Text="+" Grid.Row="5" Grid.Column="3"/>
+        <Button FontSize="24" BackgroundColor="#f1f1f1" TextColor="#455368" Command="{Binding OnClearMathematicalSentenceCommand}" Text="C" Grid.Row="6" Grid.Column="0"/>
+        <Button FontSize="24" BackgroundColor="#f57e72" TextColor="#f1f1f1" Command="{Binding OnCalculateAnswerCommand}" Text="=" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="3"/>
         
 
     </Grid>
